--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,138 @@
             android:layout_height="fill_parent"
             tools:layout="@layout/fragment_map"/>
 
+        <LinearLayout android:id="@+id/map_interstitial_ads"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center|center_vertical"
+                      tools:ignore="UselessParent">
+
+                <include layout="@layout/fragment_ads"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:id="@+id/map_banner_ads"
+                      android:layout_width="320dp"
+                      android:layout_height="60dp"
+                      android:layout_gravity="bottom|center_horizontal"
+                      android:orientation="horizontal"
+                      tools:ignore="UselessParent">
+
+                <include layout="@layout/fragment_banner_ads"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:id="@+id/map_banner_ads"
+                      android:layout_width="300dp"
+                      android:layout_height="68dp"
+                      android:layout_gravity="top|right|center_horizontal"
+                      android:orientation="horizontal"
+                      android:background="@color/white_overlay"
+                      tools:ignore="UselessParent">
+
+                <GridLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+
+                        <Button
+                                android:layout_width="50dp"
+                                android:layout_height="20dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginLeft="5dp"
+                                android:shadowRadius="0"
+                                android:shadowDx="0"
+                                android:shadowDy="0"
+                                android:background="@color/light_blue"
+                                android:layout_row="1"
+                                android:layout_column="1"
+                                />
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginLeft="10dp"
+                                android:text="T129"
+                                android:layout_row="1"
+                                android:layout_column="2"/>
+
+                        <Button
+                                android:layout_width="50dp"
+                                android:layout_height="20dp"
+                                android:shadowRadius="0"
+                                android:shadowDx="0"
+                                android:shadowDy="0"
+                                android:layout_marginBottom="5dp"
+                                android:layout_marginLeft="5dp"
+                                android:background="@color/happy_green"
+                                android:layout_row="2"
+                                android:layout_column="1"
+                                />
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:layout_marginLeft="10dp"
+                                android:text="T129"
+                                android:layout_row="2"
+                                android:layout_column="2"/>
+
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp"
+                                android:src="@mipmap/ic_action_alarms"
+                                android:layout_row="1"
+                                android:layout_column="3"/>
+
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="-6dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp"
+                                android:src="@mipmap/ic_action_alarms"
+                                android:layout_row="2"
+                                android:layout_column="3"/>
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:layout_marginTop="10dp"
+                                android:text="12 min"
+                                android:layout_row="1"
+                                android:layout_column="4"/>
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:text="13 min"
+                                android:layout_row="2"
+                                android:layout_column="4"/>
+
+                        <LinearLayout android:id="@+id/map_banner_ads"
+                                      android:layout_width="wrap_content"
+                                      android:layout_height="wrap_content"
+                                      android:layout_gravity="top|right|center_horizontal"
+                                      android:orientation="horizontal"
+                                      android:layout_marginTop="-33dp"
+                                      tools:ignore="UselessParent">
+                                <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@mipmap/ic_buzapp"
+                                        android:layout_marginLeft="20dp"
+                                        android:layout_row="1"
+                                        android:layout_column="5"/>
+                        </LinearLayout>
+                </GridLayout>
+
+        </LinearLayout>
+
 </FrameLayout>
