--- a/app/src/main/res/layout/fragment_banner_ads.xml
+++ b/app/src/main/res/layout/fragment_banner_ads.xml
@@ -1,13 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:layout_width="320dp"
+             android:layout_height="60dp"
+             android:background="@color/black_overlay"
+             android:layout_gravity="bottom|center_horizontal"
              tools:context="aloeio.buzapp.app.Fragments.BannerAdsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+    <ImageSwitcher
+            android:id="@+id/banner_ads"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+    </ImageSwitcher>
 
 </FrameLayout>
