--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <resources>
     <color name="graphity">#403f3f</color>
     <color name="black_overlay">#66000000</color>
+    <color name="white_overlay">#66FFFFFF</color>
     <color name="darker_overlay">#CC000000</color>
     <color name="black">#000</color>
     <color name="light_grey">#DBDBDB</color>
