--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
     <fragment
             android:name="aloeio.buzapp_stop.app.Fragments.MapFragment"
             android:id="@+id/main_fragment_map"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             tools:layout="@layout/fragment_map"/>
 
         <LinearLayout android:id="@+id/map_interstitial_ads"
@@ -37,11 +37,11 @@
         </LinearLayout>
 
         <LinearLayout android:id="@+id/map_banner_ads"
-                      android:layout_width="300dp"
+                      android:layout_width="340dp"
                       android:layout_height="68dp"
                       android:layout_gravity="top|right|center_horizontal"
                       android:orientation="horizontal"
-                      android:background="@color/white_overlay"
+                      android:background="@color/black_overlay"
                       tools:ignore="UselessParent">
 
                 <GridLayout
@@ -62,12 +62,14 @@
                                 />
 
                         <TextView
+                                android:id="@+id/main_txt_blue_route"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginLeft="10dp"
                                 android:text="T129"
+                                android:textSize="20sp"
                                 android:layout_row="1"
                                 android:layout_column="2"/>
 
@@ -85,11 +87,13 @@
                                 />
 
                         <TextView
+                                android:id="@+id/main_txt_green_route"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:layout_marginLeft="10dp"
                                 android:text="T129"
+                                android:textSize="20sp"
                                 android:layout_row="2"
                                 android:layout_column="2"/>
 
@@ -114,34 +118,40 @@
                                 android:layout_column="3"/>
 
                         <TextView
+                                android:id="@+id/main_txt_blue_route_time_left"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:layout_marginTop="10dp"
                                 android:text="12 min"
+                                android:textSize="20sp"
                                 android:layout_row="1"
                                 android:layout_column="4"/>
 
                         <TextView
+                                android:id="@+id/main_txt_green_route_time_left"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:text="13 min"
+                                android:textSize="20sp"
                                 android:layout_row="2"
                                 android:layout_column="4"/>
 
-                        <LinearLayout android:id="@+id/map_banner_ads"
-                                      android:layout_width="wrap_content"
-                                      android:layout_height="wrap_content"
+                        <LinearLayout
+                                      android:layout_width="68dp"
+                                      android:layout_height="68dp"
                                       android:layout_gravity="top|right|center_horizontal"
                                       android:orientation="horizontal"
                                       android:layout_marginTop="-33dp"
                                       tools:ignore="UselessParent">
                                 <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:src="@mipmap/ic_buzapp"
-                                        android:layout_marginLeft="20dp"
+                                        android:id="@+id/main_img_buzapp_corner_right"
+                                        android:layout_width="65dp"
+                                        android:layout_height="65dp"
+                                        android:src="@mipmap/buzapp_logo_1k"
+                                        android:layout_marginLeft="0dp"
+                                        android:layout_marginTop="-2dp"
                                         android:layout_row="1"
                                         android:layout_column="5"/>
                         </LinearLayout>
