--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         </LinearLayout>
 
         <LinearLayout android:id="@+id/map_banner_ads"
-                      android:layout_width="320dp"
-                      android:layout_height="60dp"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
                       android:layout_gravity="bottom|center_horizontal"
                       android:orientation="horizontal"
                       tools:ignore="UselessParent">
@@ -36,9 +36,9 @@
 
         </LinearLayout>
 
-        <LinearLayout android:id="@+id/map_banner_ads"
-                      android:layout_width="340dp"
-                      android:layout_height="68dp"
+        <LinearLayout android:id="@+id/map_next_bus"
+                      android:layout_width="370dp"
+                      android:layout_height="80dp"
                       android:layout_gravity="top|right|center_horizontal"
                       android:orientation="horizontal"
                       android:background="@color/black_overlay"
@@ -56,7 +56,7 @@
                                 android:shadowRadius="0"
                                 android:shadowDx="0"
                                 android:shadowDy="0"
-                                android:background="@color/light_blue"
+                                android:background="@color/path_red"
                                 android:layout_row="1"
                                 android:layout_column="1"
                                 />
@@ -69,7 +69,7 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_marginLeft="10dp"
                                 android:text="T129"
-                                android:textSize="20sp"
+                                android:textSize="25sp"
                                 android:layout_row="1"
                                 android:layout_column="2"/>
 
@@ -81,7 +81,7 @@
                                 android:shadowDy="0"
                                 android:layout_marginBottom="5dp"
                                 android:layout_marginLeft="5dp"
-                                android:background="@color/happy_green"
+                                android:background="@color/path_blue"
                                 android:layout_row="2"
                                 android:layout_column="1"
                                 />
@@ -93,14 +93,14 @@
                                 android:textColor="@color/white"
                                 android:layout_marginLeft="10dp"
                                 android:text="T129"
-                                android:textSize="20sp"
+                                android:textSize="25sp"
                                 android:layout_row="2"
                                 android:layout_column="2"/>
 
                         <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="2dp"
+                                android:layout_marginTop="8dp"
                                 android:layout_marginLeft="20dp"
                                 android:layout_marginRight="20dp"
                                 android:src="@mipmap/ic_action_alarms"
@@ -110,7 +110,7 @@
                         <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="-6dp"
+                                android:layout_marginTop="2dp"
                                 android:layout_marginLeft="20dp"
                                 android:layout_marginRight="20dp"
                                 android:src="@mipmap/ic_action_alarms"
@@ -124,7 +124,7 @@
                                 android:textColor="@color/white"
                                 android:layout_marginTop="10dp"
                                 android:text="12 min"
-                                android:textSize="20sp"
+                                android:textSize="25sp"
                                 android:layout_row="1"
                                 android:layout_column="4"/>
 
@@ -134,7 +134,7 @@
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/white"
                                 android:text="13 min"
-                                android:textSize="20sp"
+                                android:textSize="25sp"
                                 android:layout_row="2"
                                 android:layout_column="4"/>
 
