--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="buzapp_red">#ff0000</color>
     <color name="buzapp_red_shadow">#de0000</color>
     <color name="buzapp_dark_red">#780000</color>
+    <color name="path_red">#ff0000</color>
+    <color name="path_blue">#0971B2</color>
     <color name="light_gray">#fafafa</color>
     <color name="light_transparent_blue">#CC1286B2</color>
     <color name="light_transparent_dark_blue">#124572</color>
