--- a/app/src/main/res/layout/fragment_ads.xml
+++ b/app/src/main/res/layout/fragment_ads.xml
@@ -1,15 +1,21 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
              android:background="@color/black_overlay"
              tools:context="aloeio.buzapp.app.Fragments.InterstitialAdsFragment"
              android:visibility="invisible">
 
-    <ImageView
+    <!--<ImageView-->
+            <!--android:id="@+id/interstitial_img_ads"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:src="@mipmap/background"/>-->
+
+    <WebView
             android:id="@+id/interstitial_img_ads"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:src="@mipmap/background"/>
+            android:src="@mipmap/background"></WebView>
 
 </FrameLayout>
