--- a/app/src/main/res/drawable/circle_shape_search.xml
+++ b/app/src/main/res/drawable/circle_shape_search.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:drawable="@drawable/circle_shape" />
+    <item android:drawable="@drawable/circle_shape_blue" />
     <item android:drawable="@mipmap/search"
           android:left="10dp"
           android:right="10dp"
