--- a/app/src/main/res/layout/fragment_ads.xml
+++ b/app/src/main/res/layout/fragment_ads.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:id="@+id/interstitial_frame_layout"
+             android:layout_width="fill_parent"
+             android:layout_height="fill_parent"
              android:background="@color/black_overlay"
-             tools:context="aloeio.buzapp.app.Fragments.InterstitialAdsFragment"
-             android:visibility="invisible">
+             tools:context="aloeio.buzapp.app.Fragments.InterstitialAdsFragment">
 
     <!--<ImageView-->
             <!--android:id="@+id/interstitial_img_ads"-->
